--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     compile 'android.arch.lifecycle:runtime:1.0.0-alpha3'
     compile 'android.arch.lifecycle:extensions:1.0.0-alpha3'
     annotationProcessor 'android.arch.lifecycle:compiler:1.0.0-alpha3'
+    compile 'com.baoyz.swipemenulistview:library:1.3.0'
+    compile group: 'commons-io', name: 'commons-io', version: '2.5'
 
     compile 'org.projectlombok:lombok:1.16.16'
     compile 'me.tatarka.bindingcollectionadapter2:bindingcollectionadapter:2.1.0'
